<resources>
    <string name="app_name">Touch Pad</string>

    <!-- Connection Control Strings -->
    <string name="tryConnect">Connect</string>
    <string name="exit">Exit application</string>
    <string name="tryingToConnect">Trying to connect</string>
    <string name="failToEstablishConnection">Establishing connection failed, please try again</string>
    <string name="disconnect">Disconnect?</string>

    <!-- Default AlertDialog Title & Button -->
    <string name="warning">Warning</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="abort">Abort</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>

    <!-- Main activity & Activity Connected-->
    <string name="exitApplicationConfirm">Do you want to exit?</string>
    <string name="macRequired">In order to connect to a pc, bluetooth mac address is required. Press
        confirm to enter the setting to set mac address.</string>
    <string name="phoneAsTouchPad">Touch Pad</string>
    <string name="connected">Connected</string>

    <!-- Controls -->
    <string name="basicControl">(Basic Control)</string>
    <string name="switchControl">Switch</string>
    <string name="finger">Finger</string>

    <!-- Action -->
    <string name="tap">Tap</string>
    <string name="move">Move</string>
    <string name="longPress">Long Press</string>
    <string name="moveLeft">Move Left</string>
    <string name="moveRight">Move Right</string>
    <string name="moveUp">Move Up</string>
    <string name="moveDown">Move Down</string>
    <string name="doubleTap">Double Tap</string>

    <!-- Task -->
    <string name="click">Click</string>
    <string name="rightClick">Right Click</string>
    <string name="doubleClick">Double Click</string>
    <string name="moveCursor">Move Cursor</string>
    <string name="taskSelect">Select</string>
    <string name="scroll">Scroll</string>
    <string name="returnToDesktop">Return to Desktop</string>
    <string name="enableTaskMode">Enable Task Mode</string>
    <string name="switchApplication">Switch Application</string>
    <string name="switchTab">Switch Tab</string>
    <string name="undo">Undo</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="cut">Cut</string>
    <string name="exitTouchPad">Exit Touch Pad</string>

    <!-- All settings -->
    <string name="setting">Setting</string>
    <string name="connectionSetting">Connection</string>
    <string name="generalSetting">General Setting</string>
    <string name="mappingControl">Mapping</string>

    <!-- General setting -->
    <string name="orientation">Touch pad orientation</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="orientationDescription">Orientation will only work in touch pad mode, the launch
        screen orientation will not be changed by this setting.</string>
    <string name="cursorMode">Cursor Mode</string>
    <string name="relative">Relative</string>
    <string name="absolute">Absolute</string>
    <string name="cursorModeDescription">Controls how the cursor move on a remote computer. Absolute
        indicates all the actions are directly mapped onto the computer, behaving like a touch screen;
        while relative indicates that only changing in position is recorded, behaving like a real touch pad.</string>
    <string name="scrollMode">Scroll Mode</string>
    <string name="forward">Forward</string>
    <string name="reverse">Reverse</string>
    <string name="scrollModeDescription">Normally, the setting for a computer run on Mac OS is forward,
        and the scroll mode for a computer run on Windows is reverse</string>
    <string name="touchWarning">Touch Warning</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="touchWarningDescription">This controls if a warning message box is showed in any
        touch pad mode when the number of fingers detected on the screen is more than 5. (For
        accuracy reason, those events will be ignored.)</string>
    <string name="vibrationMode">Vibration</string>
    <!-- <string name="enabled">Enabled</string>
         <string name="disabled">Disabled</string> -->
    <string name="followSystem">Follow system setting</string>
    <string name="vibrationModeDescription">Will the device vibrate in some circumstances.</string>

    <string name="sensitivityHeading">Sensitivity</string>

    <!-- Connection setting -->
    <string name="connectionSettingDescription">You can always add a new device here as long as its
        bluetooth mac address is known. If you do not know your device\'s bluetooth mac, start the
        application on the other side to see its address.\nThe name of the device can be changed by
        clicking the device name.\nSelect the device you want to connect.</string>
    <string name="addDevice">Add a new device</string>

    <!-- ActivityTouchPad -->
    <string name="pasteFromClipboard">Paste from clipboard</string>
    <string name="noContentInClipboard">No content in clipboard</string>

    <!-- Add new mapping -->
    <string name="add">Add new mapping</string>
    <string name="currentSelected">Currently Selected</string>
    <string name="selectTask">Select mapping action type</string>
    <string name="setFingerNumDescription">Select number of finger(s) used in the action</string>
    <string name="setActionDescription">Select finger action type</string>
    <string name="bindAdding">This will also assign</string>
    <string name="to">to</string>
    <string name="addMapping">Add following mapping?</string>
    <string name="removeMapping">Remove following mapping?</string>

    <string name="abortCurrentOperation">Abort current operation?</string>
    <string name="select">Select</string>
    <string name="replace">Replace</string>

    <!-- Connection/Device Configuration -->
    <string name="rename">Rename</string>
    <string name="currentName">Current name is</string>
    <string name="confirmDeleteDevice">Do you want to delete this device?</string>
    <string name="deleteDevice">Delete this device?</string>
    <string name="deviceNameHint">Device Name</string>
    <string name="setDefault">Default</string>
    <string name="defaultDeviceName">My new device</string>
    <string name="deviceMacHint">Device Mac</string>
    <string name="invalidMac">Invalid Mac Address</string>
    <string name="duplicatedMac">Duplicated Mac Address</string>
    <string name="tabDisableDescription">"Device list is not allowed to be modified when connected"</string>

</resources>
