<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/black_ops_one"
        android:text="@string/setting"
        android:textSize="20sp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabContainer"
        android:layout_width="match_parent"
        app:tabSelectedTextColor="@color/colorAccent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/generalSettingsTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generalSetting" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/mappingTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mappingControl" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>