<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainWindow"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/tryConnect"
        android:layout_width="328dp"
        android:layout_height="59dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="42dp"
        android:text="@string/tryConnect"
        app:layout_constraintBottom_toBottomOf="@+id/absorbMotionEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/settingInMainScreen"
        android:layout_width="328dp"
        android:layout_height="59dp"
        android:text="@string/setting"
        app:layout_constraintBottom_toBottomOf="@+id/absorbMotionEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tryConnect"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/exit"
        android:layout_width="328dp"
        android:layout_height="59dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="@+id/absorbMotionEvent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingInMainScreen"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/absorbMotionEvent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/connectionProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:max="100000"
        android:progress="0"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/absorbMotionEvent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit" />

</androidx.constraintlayout.widget.ConstraintLayout>